# internal/models/auth/model.go
@@ -8,7 +8,3 @@ type ModelRequest struct {
 type ModelResponse struct {
 	Token string `json:"token"`
 }
-
-type ErrorResponse struct {
-	Error string
-}
