# internal/models/data/model.go
@@ -1,0 +1,13 @@
+package data
+
+type Write struct {
+	Data map[string]interface{} `json:"data"`
+}
+
+type Read struct {
+	Keys []string `json:"keys"`
+}
+
+type StatusResponse struct {
+	Status string `json:"status"`
+}
