# internal/transport/handlers/data/handler.go
@@ -1,6 +1,7 @@
 package data
 
 import (
+	dataservice "VK-Pilot-Project/internal/services/data"
 	"VK-Pilot-Project/internal/transport/middleware"
 	"log/slog"
 	"net/http"
@@ -10,16 +11,18 @@ import (
 
 type handler struct {
 	logger     *slog.Logger
+	service    *dataservice.Service
 	middleware *middleware.Handler
 }
 
 const (
-	loginURL = "/api/login"
+	loginURL = "/api/write"
 )
 
-func New(logger *slog.Logger, mid *middleware.Handler) *handler {
+func New(logger *slog.Logger, service *dataservice.Service, mid *middleware.Handler) *handler {
 	return &handler{
 		logger:     logger,
+		service:    service,
 		middleware: mid,
 	}
 }
@@ -27,6 +30,7 @@ func New(logger *slog.Logger, mid *middleware.Handler) *handler {
 func (handler *handler) HandleRoute(router *mux.Router) {
 	router.HandleFunc(loginURL,
 		handler.middleware.Recover(
-			handler.middleware.Logging(handler.write))).
+			handler.middleware.Logging(
+				handler.middleware.Auth(handler.write)))).
 		Methods(http.MethodPost)
 }
